# ZouKaraoke

./: .gitignore  LICENSE  PlayListWidget.py  PyPlayer.py  PyPlayer.spec  README.md  ReadSongs.py  Scripts.py  SearchListWidget.py  main.py  mainwindow.py  newsonginfoform.py  playlistwidget.py  pyproject.toml  searchlistwidget.py  song.py  test.ipynb  test.py
ZouKaraoke/: Container.py  EventBus.py  Main.py  MainWindow.py  PlayListWidget.py  PyPlayer.py  SearchListWidget.py  Song.py  __init__.py
ZouKaraoke/MainWindow/: SearchListWidget.py  __init__.py
ZouKaraoke/MainWindow/PlayListWidget/: NewSongInfoForm.py  PlayerWindow.py  __init__.py
tests/: __init__.py
